--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -1,6 +1,7 @@
 @import url("./adminportal/page/dashboard.css");
 @import url("./adminportal/page/bughunt.css");
 @import url("./adminportal/page/viewbugreport.css");
+@import url("./adminportal/page/viewuser.css");
 @import url("./adminportal/page/users.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
