--- a/src/css/window.css
+++ b/src/css/window.css
@@ -3,6 +3,7 @@
 @import url("./window/controls.css");
 @import url("./window/overlay.css");
 @import url("./window/body.css");
+@import url("./window/markdown.css");
 @import url("./window/button.css");
 @import url("./window/checkbox.css");
 @import url("./window/fields.css");
