--- a/src/css/apps/user/messages.css
+++ b/src/css/apps/user/messages.css
@@ -186,6 +186,7 @@
   width: 40px;
   height: 40px;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 #Messages > div.body div.container {
@@ -200,7 +201,7 @@
 }
 
 #Messages > div.body div.container div.message-content {
-  /* height: 100%; */
+  height: 100%;
   flex-grow: 1;
   overflow-y: scroll;
   padding: 20px;
