--- a/src/css/apps/user/settings/page/wallpaper.css
+++ b/src/css/apps/user/settings/page/wallpaper.css
@@ -89,3 +89,11 @@
 #systemSettings div.wallpaper button.wallpaper-option.selected div.selected-overlay {
   opacity: 1;
 }
+
+#systemSettings div.wallpaper button.wallpaper-option div.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
