Remove colored shell border radius on docked taskbar

--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -18,6 +18,10 @@ div.shell div.taskbar {
   transition: translate 0.3s;
 }
 
+div.shell.docked div.taskbar.shell-colored::before {
+  border-radius: 0;
+}
+
 div.shell.has-fullscreen div.taskbar {
   translate: 0 70px;
 }
