--- a/src/css/apps/components/messagecomposer.css
+++ b/src/css/apps/components/messagecomposer.css
@@ -1,5 +1,7 @@
 #MessageComposer > div.body {
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #MessageComposer > div.body div.fields > div.field {
@@ -72,18 +74,17 @@
 }
 
 #MessageComposer > div.body div.message-body {
-  /* flex-grow: 1; */
-  height: calc(100% - 36px - 36px - 50px - 47px);
+  flex-grow: 1;
   border-bottom: var(--win-border);
 }
 
-#MessageComposer > div.body div.message-body div.carta-editor {
+#MessageComposer > div.body div.message-body textarea {
+  width: 100%;
   height: 100%;
+  resize: none;
+  background-color: var(--win-bg);
   border: none;
-}
-
-#MessageComposer > div.body div.message-body div.carta-wrapper {
-  height: calc(100% - 50px);
+  padding: 15px;
 }
 
 #MessageComposer > div.body div.attachment-bar {
