--- a/src/css/apps/user/bughunt/creator.css
+++ b/src/css/apps/user/bughunt/creator.css
@@ -15,33 +15,26 @@
   background-color: var(--win-bg);
   height: 100%;
   overflow: hidden;
-  /* display: flex; */
-  /* flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 #BugHuntCreator > div.body div.fields {
   display: flex;
   flex-direction: column;
-  height: calc(100% - 50px);
+  flex-grow: 1;
+  max-height: calc(100% - 50px - var(--titlebar-height));
 }
-#BugHuntCreator > div.body div.report-body {
+#BugHuntCreator > div.body textarea {
   width: 100%;
   height: calc(100% - 50px - 50px - 60px);
-  border-bottom: var(--win-border);
-  overflow: hidden;
-}
-
-#BugHuntCreator > div.body div.report-body div.carta-editor {
-  height: 100%;
+  background-color: transparent;
+  color: var(--fg);
+  padding: 15px;
   border: none;
-}
-
-#BugHuntCreator > div.body div.report-body div.carta-wrapper {
-  height: calc(100% - 50px);
-}
-
-#BugHuntCreator > div.body div.report-body div.markdown-body {
-  height: 100%;
+  border-bottom: var(--win-border);
+  resize: none;
+  font-size: 13px;
 }
 
 #BugHuntCreator > div.body div.notice {
