--- a/src/css/apps/user/advsystemsettings.css
+++ b/src/css/apps/user/advsystemsettings.css
@@ -1,3 +1,83 @@
+@import url("./advsystemsettings/startup.css");
+
 #AdvSystemSettings > div.body {
-  padding: 0;
+  padding: 0 10px;
+}
+
+#AdvSystemSettings > div.body div.tabs {
+  display: flex;
+  align-items: end;
+  padding: 10px;
+  padding-bottom: 0;
+  height: 40px;
+}
+
+#AdvSystemSettings > div.body div.tabs button {
+  border-radius: 0;
+  border: var(--win-border);
+  border-bottom: 0;
+  height: 26px;
+  padding: 0 8px;
+  min-width: unset;
+  background-color: var(--win-bg);
+}
+
+#AdvSystemSettings > div.body div.tabs button:hover {
+  background-color: var(--button-glass-bg);
+}
+
+#AdvSystemSettings > div.body div.tabs button + button {
+  border-left: 0;
+}
+
+#AdvSystemSettings > div.body div.tabs button.selected {
+  background-color: var(--button-bg);
+  height: 30px;
+  padding: 0 8px;
+  translate: 0 1px;
+  border-left: var(--win-border);
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+#AdvSystemSettings > div.body div.tabs button + button.selected {
+  margin-left: -1px;
+}
+
+#AdvSystemSettings > div.body div.tabs button:first-child {
+  border-top-left-radius: 5px;
+}
+
+#AdvSystemSettings > div.body div.tabs button:last-child {
+  border-top-right-radius: 5px;
+}
+
+#AdvSystemSettings > div.body div.content {
+  height: calc(100% - 40px - 50px);
+  border: var(--win-border);
+  background-color: var(--button-bg);
+  border-radius: 4px;
+  padding: 15px;
+}
+
+#AdvSystemSettings > div.body div.content div.warning {
+  display: flex;
+  align-items: start;
+  gap: 10px;
+}
+
+#AdvSystemSettings > div.body div.content div.warning img {
+  height: 20px;
+}
+
+#AdvSystemSettings > div.body div.actions {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 10px;
+}
+
+#AdvSystemSettings > div.body div.actions button {
+  padding: 0 15px;
+  height: 30px;
 }
