abuse testApp some more

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,6 +11,7 @@
 @import url("./spinner.css");
 @import url("./virtualdesktop.css");
 @import url("./infoblock.css");
+@import url("./codeeditor.css");
 @import url("./state/crash.css");
 @import url("./state/desktop.css");
 @import url("./state/licensedeclined.css");
