--- a/src/css/apps/components/test.css
+++ b/src/css/apps/components/test.css
@@ -1,70 +1,3 @@
-#testApp > div.body {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-}
-
-#testApp > div.body div.actions {
-  padding: 10px;
-  border-bottom: var(--win-border);
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-#testApp > div.body div.actions button {
-  margin: 0;
-  height: 24px;
-  line-height: 24px;
-  padding: 0 15px;
-}
-
-#testApp > div.body div.actions input {
-  margin-left: auto;
-}
-
-#testApp > div.body div.top {
-  display: flex;
-  align-items: center;
-  height: calc(100% - 30% - 45px);
-}
-
-#testApp > div.body div.top textarea {
-  background-color: var(--win-bg);
-  border: none;
-  flex-grow: 1;
-  height: 100% !important;
-  max-width: 50%;
-  border-right: var(--win-border);
-  resize: none;
-  padding: 10px;
-  font-family: "Source Code Pro";
-}
-
-#testApp > div.body div.top div.output {
-  width: 50%;
-  height: 100%;
-}
-
-#testApp > div.body div.top div.output > div {
-  height: 50%;
-  max-height: 50%;
-  width: 100%;
-  white-space: pre-wrap;
-  font-family: "Source Code Pro";
-  overflow-y: scroll;
-  padding: 10px;
-}
-
-#testApp > div.body div.top div.output > div + div {
-  border-top: var(--win-border);
-}
-
-#testApp > div.body div.bottom {
-  height: 30%;
-  overflow-y: auto;
-  white-space: pre-wrap;
-  font-family: "Source Code Pro";
-  border-top: var(--win-border);
-  padding: 10px;
-}
+/* #testApp > div.body {
+  overflow-y:scroll
+} */
