--- a/src/css/apps/user/advsystemsettings/dispatch.css
+++ b/src/css/apps/user/advsystemsettings/dispatch.css
@@ -20,8 +20,9 @@
   display: flex;
   align-items: center;
   border-bottom: var(--win-border);
-  height: 30px;
+  height: 31px;
   padding: 0 10px;
+  padding-right: 0;
 }
 
 #AdvSystemSettings > div.body div.dispatch-clients div.list div.row div.segment.ip {
@@ -29,5 +30,29 @@
 }
 
 #AdvSystemSettings > div.body div.dispatch-clients div.list div.row div.segment.authorized {
-  width: 85px;
+  width: 105px;
+  border-left: var(--win-border);
+  height: 30px;
+  line-height: 30px;
+  padding: 0 10px;
+}
+#AdvSystemSettings > div.body div.dispatch-clients div.list div.row.head {
+  font-weight: bold;
+}
+
+#AdvSystemSettings > div.body div.dispatch-clients div.list div.row button.lucide {
+  width: 31px;
+  height: 30px;
+  border-left: var(--win-border);
+  padding: 0;
+  height: 30px;
+  border-radius: 0;
+}
+
+#AdvSystemSettings > div.body div.dispatch-clients div.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
