--- a/src/css/apps/user/messages.css
+++ b/src/css/apps/user/messages.css
@@ -117,7 +117,7 @@
   background-color: var(--accent-transparent);
 }
 
-#Messages > div.body div.messages button.message > div {
+#Messages > div.body div.messages button.message > div:not(.pfprenderer) {
   flex-grow: 1;
   max-width: calc(100% - 12px - 40px);
 }
@@ -129,7 +129,8 @@
 }
 
 #Messages > div.body div.messages button.message,
-#Messages > div.body div.messages button.message * {
+#Messages > div.body div.messages button.message > div:not(.pfprenderer),
+#Messages > div.body div.messages button.message > div:not(.pfprenderer) * {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
