Add the My ArcOS page to the file manager

--- a/src/css/apps/user/filemanager.css
+++ b/src/css/apps/user/filemanager.css
@@ -1,6 +1,7 @@
 @import url("./filemanager/sidebar.css");
 @import url("./filemanager/addressbar.css");
 @import url("./filemanager/directoryviewer.css");
+@import url("./filemanager/virtual/myarcos.css");
 @import url("./filemanager/splash.css");
 @import url("./filemanager/bottom.css");
 
