--- a/src/css/apps/user/settings.css
+++ b/src/css/apps/user/settings.css
@@ -14,6 +14,7 @@
 @import url("./settings/overlay/urlloginbackground.css");
 @import url("./settings/overlay/urlwallpaper.css");
 @import url("./settings/overlay/urlprofilepicture.css");
+@import url("./settings/overlay/userfont.css");
 @import url("./settings/slide.css");
 @import url("./settings/slide/weatherlocation.css");
 @import url("./settings/slide/userstyle.css");
