--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
+/** USER FONTS **/
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Bad+Script&family=Caveat:wght@400..700&family=Changa:wght@200..800&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kotta+One&family=Lora:ital,wght@0,400..700;1,400..700&family=Merienda:wght@300..900&family=Nothing+You+Could+Do&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playwrite+AU+SA:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reddit+Sans:ital,wght@0,200..900;1,200..900&family=Shadows+Into+Light&family=Sofia&display=swap");
+/****************/
+@import url("./userfonts.css");
 @import url("./lucide.css");
 @import url("./window.css");
 @import url("./progressbar.css");
@@ -75,6 +79,7 @@ main#main.hidden #appRenderer {
   height: 100%;
   pointer-events: none;
   transition: opacity 300ms;
+  font-family: var(--user-font, "Nunito Sans"), "Nunito Sans";
 }
 
 #appRenderer > div.window:not(.core) {
