some crash stuff and stuff

--- a/src/css/apps/user/processmanager.css
+++ b/src/css/apps/user/processmanager.css
@@ -151,5 +151,10 @@
 }
 
 #processManager > div.body div.row.orphan {
+  /* background-color: var(--clr-red-bg); */
+  opacity: 0.5;
+}
+
+#processManager > div.body div.row.orphan * {
   color: var(--clr-red-fg);
 }
