--- a/src/css/apps/components/shell/startmenu/bottom.css
+++ b/src/css/apps/components/shell/startmenu/bottom.css
@@ -14,14 +14,14 @@ div.shell div.startmenu div.bottom span.lucide {
   font-size: 20px;
 }
 
-div.shell div.startmenu div.bottom div.search {
+div.shell div.startmenu div.bottom form.search {
   flex-grow: 1;
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-div.shell div.startmenu div.bottom div.search input {
+div.shell div.startmenu div.bottom form.search input {
   margin: 0;
   padding: 0;
   flex-grow: 1;
