Finally make the quick settings

--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -34,6 +34,10 @@ div.shell.docked div.actioncenter {
   border-radius: 0;
 }
 
+div.shell.docked div.actioncenter::before {
+  border-radius: 0 !important;
+}
+
 div.shell div.actioncenter.opened {
   translate: 0;
   opacity: 1;
