--- a/src/css/apps/components/shell/actioncenter/notifications.css
+++ b/src/css/apps/components/shell/actioncenter/notifications.css
@@ -5,6 +5,8 @@
   flex-grow: 1;
   overflow: hidden;
   box-shadow: 0 2px 5px 2px #0002;
+  display: flex;
+  flex-direction: column;
 }
 
 #arcShell div.shell div.notifications > div.content > p.none {
@@ -41,7 +43,9 @@
 }
 
 #arcShell div.shell div.notifications > div.content {
-  height: calc(100% - 36px);
+  /* height: calc(100% - 36px); */
+  flex-grow: 1;
+  width: calc(100% + 8px);
   overflow-y: scroll;
   margin-right: -8px;
   padding: 10px 0;
@@ -153,4 +157,14 @@ div.shell div.actioncenter div.notification.collapsed div.buttons {
   to {
     opacity: 0.5;
   }
+}
+
+div.shell div.actioncenter div.notifications button.quick-settings-toggle {
+  margin-left: auto;
+  text-decoration: none;
+  color: var(--accent-lighter);
+}
+
+div.shell div.actioncenter div.notifications button.quick-settings-toggle.shown {
+  opacity: 0.7;
 }
