--- a/src/css/apps/components/shell/actioncenter/quicksettings.css
+++ b/src/css/apps/components/shell/actioncenter/quicksettings.css
@@ -1,7 +1,49 @@
 div.shell div.actioncenter div.quick-settings {
-  height: 64px;
-  min-height: 64px;
+  height: 60px;
+  min-height: 60px;
   background-color: var(--button-glass-bg);
   border-radius: 10px;
   box-shadow: 0 2px 5px 2px #0002;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding: 0 10px;
+}
+
+div.shell div.actioncenter div.quick-settings button {
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  padding: 0;
+  background-color: var(--button-glass-bg);
+}
+
+div.shell div.actioncenter div.quick-settings button:hover {
+  background-color: var(--button-glass-hover-bg);
+}
+
+div.shell div.actioncenter div.quick-settings button:active {
+  background-color: var(--button-glass-active-bg) !important;
+}
+
+div.shell div.actioncenter div.quick-settings div.sep {
+  width: 1px;
+  height: 40px;
+  background-color: var(--button-glass-hover-bg);
+}
+
+div.shell div.actioncenter div.quick-settings button.active {
+  background-color: var(--accent-light);
+  color: var(--accent-darkest);
+}
+
+div.shell div.actioncenter div.quick-settings button.active:hover {
+  filter: brightness(1.2);
+}
+
+div.shell div.actioncenter div.quick-settings button.active:active {
+  opacity: 0.5;
+  filter: none;
+  background-color: var(--accent-light) !important;
 }
