Begin working on ArcTerm mode v7

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,7 @@
 @import url("./state/licensedeclined.css");
 @import url("./state/serverdown.css");
 @import url("./state/turnedoff.css");
+@import url("./state/arcterm.css");
 
 html,
 body {
