AP: Continue working on reports, viewuser, viewbugreport

--- a/src/css/apps/admin/adminportal/page/viewuser.css
+++ b/src/css/apps/admin/adminportal/page/viewuser.css
@@ -5,6 +5,11 @@
 #AdminPortal div.viewUser div.leftpanel {
   border-right: var(--win-border);
   width: calc(100% - 400px);
+  overflow-y: auto;
+}
+
+#AdminPortal div.viewUser div.leftpanel::-webkit-scrollbar {
+  display: none;
 }
 
 #AdminPortal div.viewUser div.rightpanel {
@@ -123,6 +128,11 @@
   height: 36px;
 }
 
+#AdminPortal div.viewUser div.section.shares div.share-row:last-child {
+  border-bottom: none;
+  height: 35px;
+}
+
 #AdminPortal div.viewUser div.section.shares div.share-row span.lucide {
   font-size: 16px;
   color: var(--accent-lighter);
@@ -157,6 +167,76 @@
 }
 
 #AdminPortal div.viewUser div.section.shares div.segment.size {
+  margin-left: auto;
+}
+
+#AdminPortal div.viewUser div.section.reports {
+  border-bottom: var(--win-border);
+}
+
+#AdminPortal div.viewUser div.section.reports > div {
+  padding: 0;
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: var(--win-border);
+  height: 36px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row:hover {
+  background-color: var(--accent-transparent);
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row:last-child {
+  border-bottom: none;
+  height: 35px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row span.lucide {
+  font-size: 16px;
+  color: var(--accent-lighter);
+  line-height: 35px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row div.segment.icon {
+  width: 36px;
+  height: 35px;
+  border-right: var(--win-border);
+  text-align: center;
+  font-weight: normal;
+  min-width: 36px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.report-row.header {
+  font-weight: bold;
+  background-color: var(--button-bg);
+}
+
+#AdminPortal div.viewUser div.section.reports div.segment.title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#AdminPortal div.viewUser div.section.reports div.segment.closed,
+#AdminPortal div.viewUser div.section.reports div.segment.resolved {
+  width: 36px;
+  height: 35px;
+  border-left: var(--win-border);
+  background-color: var(--button-bg);
+  line-height: 36px;
+  text-align: center;
+  min-width: 36px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.segment.resolved {
+  margin-left: -10px;
+}
+
+#AdminPortal div.viewUser div.section.reports div.segment.closed {
   margin-left: auto;
 }
 
