--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -3,11 +3,21 @@
 @import url("./adminportal/page/viewbugreport.css");
 @import url("./adminportal/page/viewuser.css");
 @import url("./adminportal/page/users.css");
+@import url("./adminportal/page/shares.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
 #AdminPortal {
   --font-size: 12px;
+}
+
+#AdminPortal > div.body div.titlebar.custom button.icon-arrow-left {
+  padding: 0;
+  font-size: 16px;
+  width: 30px;
+  height: 30px;
+  margin: 0 -5px;
+  background-color: transparent;
 }
 
 #AdminPortal > div.body {
