--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -4,6 +4,7 @@
 @import url("./adminportal/page/viewuser.css");
 @import url("./adminportal/page/users.css");
 @import url("./adminportal/page/shares.css");
+@import url("./adminportal/page/viewshare.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
@@ -11,7 +12,7 @@
   --font-size: 12px;
 }
 
-#AdminPortal > div.body div.titlebar.custom button.icon-arrow-left {
+#AdminPortal > div.body div.titlebar.custom button.icon-arrow-up {
   padding: 0;
   font-size: 16px;
   width: 30px;
