--- a/src/css/apps/user/settings/page/account.css
+++ b/src/css/apps/user/settings/page/account.css
@@ -66,6 +66,43 @@
 #systemSettings div.container.account div.header h1.account-name {
   font-size: 16px;
   margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+#systemSettings div.container.account div.header h1.account-name input {
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  border: none;
+  text-align: center;
+  border-bottom: var(--button-glass-hover-bg) 1px solid;
+  border-radius: 0;
+}
+
+#systemSettings div.container.account div.header h1.account-name > span {
+  border-bottom: transparent 1px solid;
+}
+
+#systemSettings div.container.account div.header h1.account-name button {
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  font-size: 16px;
+  background-color: transparent;
+  opacity: 0.5;
+  margin-right: -26px;
+  opacity: 0;
+}
+
+#systemSettings div.container.account div.header h1.account-name.editing button,
+#systemSettings div.container.account div.header h1.account-name:hover button {
+  opacity: 1;
+}
+#systemSettings div.container.account div.header h1.account-name.editing button {
+  color: var(--clr-green-fg);
 }
 
 #systemSettings div.container.account div.header p.email {
